# OC-P13_Archery_Buddy

./: .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_gh_pages.yml  static.yml  unit-tests.yml
ArcheryBuddy/: .env  manage.py
ArcheryBuddy/Accounts/: models.py
ArcheryBuddy/DjangoConf/: asgi.py  settings.py  urls.py  wsgi.py
ArcheryBuddy/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
ArcheryBuddy/alternativeequipment/: admin.py  apps.py
ArcheryBuddy/core/: tests.py  tests_functionnal.py  urls.py
ArcheryBuddy/equipment/: admin.py  apps.py  tests.py
ArcheryBuddy/materials/: admin.py  models.py
ArcheryBuddy/records/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
conception/: User stories.md
docs/: bilan.md  eXtreme programming.md  note d'intention.md  test_plan.md  user_story-1.md  user_story-2.md  user_story-3.md
docs/diagrams/: classes.puml  mpd.puml  use_cases.puml
docs/infra/: infrastructure.puml
docs/use_cases/: P1-UC-4-delete_account.md  P1-UC1-register.md  P1-UC2-login.md  P1-UC3-logout.md  P2-UC1-create_quiver_session.md  P2-UC2-compose_quiver.md  P2-UC2-save_arrows.md  P2-UC3-compose_quiver.md  P3-UC1-create_bow.md  P3-UC2-read_bow.md  P3-UC3-update_bow.md  P3-UC4-delete_bow.md  P3-UC5-create_arrow.md  P3-UC6-read_arrow.md  P3-UC7-update_arrow.md  P3-UC8-delete_arrow.md  P3-UC9-declare_arrow_broken.md  P4-UC1-create_practice_session.md  P4-UC2-read_practice_session.md  P4-UC3-update_practice_session.md  P4-UC5-add_shots.md  (+4 more)
(+76 files in other folders)
